--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,13 @@
     text-align: center;
     background-color: #162252;
     color: white;
-    text-size-adjust: 50px;
+    font-size: 50px;
 
+    /* margin-left: 15%;
+    margin-right: 15%; */
+
+}
+.card-header{
+    background-color: #162252;
+    color: white;
 }
